[package]
categories = ["development-tools::debugging"]
description = "Better error messages for axum framework."
edition = "2018"
homepage = "https://github.com/tokio-rs/axum"
keywords = ["axum", "debugging", "debug"]
license = "MIT"
name = "axum-debug"
readme = "README.md"
repository = "https://github.com/tokio-rs/axum"
version = "0.3.2"

[lib]
proc-macro = true

[dependencies]
axum-macros = { path = "../axum-macros", version = "0.1" }
